fix overflowing item title

--- a/web/components/image-tile/image-tile.sass
+++ b/web/components/image-tile/image-tile.sass
@@ -96,3 +96,4 @@
     .caption
         text-align: center
         margin-top: 6px
+        word-wrap: break-word
